# ChangeLog for xfce-extra/sion
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sion-0.0.1 (13 Dec 2008)

  13 Dec 2008; Christoph Mende <angelos@gentoo.org> +sion-0.0.1.ebuild:
  Initial import
