@@ -3,12 +3,13 @@ Hash: SHA1
 
 DIST sion-0.0.1.tar.bz2 93039 RMD160 a2318077b370273a4d4dd397c5098de8faa9ad60 SHA1 9572451bf8d9304822611d2f2bc3422728ee9af7 SHA256 24a472df76e7fdf7a02ebfc88bb5e9c542c08f207bf5733824650de4ec4a6891
 EBUILD sion-0.0.1.ebuild 850 RMD160 737965adb6c74ce3eab1e91f5255fd7856204426 SHA1 b292bb88e3e600b66a574b842f4e904d6b789efb SHA256 b7b4fbf657701c42595f883c7a0822538a5d5f196db062a83f3112bc2b67b714
-MISC ChangeLog 233 RMD160 126a565a4862d3b1e1da426ca9d66e65ca633064 SHA1 f084709f04e07c0eeaaed30d760132191139a0c8 SHA256 cdf0a1dfb7b73dbb13490bf614fa91e8ffc8a752c765a00623d9dd80604eb7f7
+EBUILD sion-9999.ebuild 872 RMD160 9e3fc70cb027969a9adc23c1c994e7e78eafbb09 SHA1 99acd07211684717cb4c8bb18c9d61d665c907f9 SHA256 240b96ce7140126a936d9566d28e478b9c2d5bc3eaf5e5821ef376dd092d6b46
+MISC ChangeLog 351 RMD160 32ec29de6b38460188b8cc576137b8b6a098a006 SHA1 7ac59bf77fde037227c240fc6a7e82fb9c0e44a0 SHA256 691c82c4e48e3699ddd4bfda56b870bbadf2caf6a275d611db2f8b8755c93955
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklDuYUACgkQKhnDs22gwa+edgCggD1L2cfxHOysH8l6g9oDE6EF
-gPAAoOEf1VvbC3OvfUkanrlPWmsiQpUf
-=bOqO
+iEYEARECAAYFAklD5y4ACgkQKhnDs22gwa/7QQCgtFJhmAK5yKXuns4AAmwr0/yd
+W/IAoIj/o0A9nuoHnrfq/iROPZqX26jx
+=2ci1
 -----END PGP SIGNATURE-----
